src/FJadeParser.py
# Generated from FJade.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FJadeParser ( Parser ):

    grammarFileName = "FJade.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'ELSE'", "'FUNCTION'", "'PROCESS'", "'PLAYER_EVENT'", 
                     "'EVENT'", "'ENTITY_EVENT'", "'loc'", "'item'", "'var'", 
                     "'val'", "'pot'", "'snd'", "'part'", "'{}'", "'{'", 
                     "'}'", "'<'", "'>'", "'['", "']'", "';'", "':'", "','", 
                     "'!'", "'@'", "'|'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "MULTILINECOMMENT", 
                      "NL", "COMMENT", "WS", "HEX", "TARGET", "ELSE", "FUNCTION", 
                      "PROCESS", "PLAYEREVENT", "PLAYEREVENTALT", "ENTITYEVENT", 
                      "LOCATION", "ITEM", "VARIABLE", "VALUE", "POTION", 
                      "SOUND", "PARTICLE", "CBRACE", "LBRACE", "RBRACE", 
                      "LESSTHAN", "GREATERTHAN", "LBRACK", "RBRACK", "SEMI", 
                      "COLON", "COMMA", "NEGATE", "SELECTOR", "PIPE", "STRING", 
                      "NUMBER", "CATEGORY", "NAME" ]

    RULE_fjade = 0
    RULE_func = 1
    RULE_proc = 2
    RULE_playerev = 3
    RULE_entityev = 4
    RULE_stmt = 5
    RULE_simplestmt = 6
    RULE_blockedstmt = 7
    RULE_elsestmt = 8
    RULE_classicblockedstmt = 9
    RULE_paramslist = 10
    RULE_expr = 11
    RULE_vector = 12
    RULE_location = 13
    RULE_item = 14
    RULE_variable = 15
    RULE_gval = 16
    RULE_array = 17
    RULE_dictionary = 18
    RULE_potion = 19
    RULE_sound = 20
    RULE_particle = 21
    RULE_partMaterial = 22
    RULE_partCluster = 23

    ruleNames =  [ "fjade", "func", "proc", "playerev", "entityev", "stmt", 
                   "simplestmt", "blockedstmt", "elsestmt", "classicblockedstmt", 
                   "paramslist", "expr", "vector", "location", "item", "variable", 
                   "gval", "array", "dictionary", "potion", "sound", "particle", 
                   "partMaterial", "partCluster" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    MULTILINECOMMENT=3
    NL=4
    COMMENT=5
    WS=6
    HEX=7
    TARGET=8
    ELSE=9
    FUNCTION=10
    PROCESS=11
    PLAYEREVENT=12
    PLAYEREVENTALT=13
    ENTITYEVENT=14
    LOCATION=15
    ITEM=16
    VARIABLE=17
    VALUE=18
    POTION=19
    SOUND=20
    PARTICLE=21
    CBRACE=22
    LBRACE=23
    RBRACE=24
    LESSTHAN=25
    GREATERTHAN=26
    LBRACK=27
    RBRACK=28
    SEMI=29
    COLON=30
    COMMA=31
    NEGATE=32
    SELECTOR=33
    PIPE=34
    STRING=35
    NUMBER=36
    CATEGORY=37
    NAME=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FjadeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self):
            return self.getTypedRuleContext(FJadeParser.FuncContext,0)


        def EOF(self):
            return self.getToken(FJadeParser.EOF, 0)

        def proc(self):
            return self.getTypedRuleContext(FJadeParser.ProcContext,0)


        def playerev(self):
            return self.getTypedRuleContext(FJadeParser.PlayerevContext,0)


        def entityev(self):
            return self.getTypedRuleContext(FJadeParser.EntityevContext,0)


        def getRuleIndex(self):
            return FJadeParser.RULE_fjade

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFjade" ):
                listener.enterFjade(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFjade" ):
                listener.exitFjade(self)




    def fjade(self):

        localctx = FJadeParser.FjadeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_fjade)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.func()
                self.state = 49
                self.match(FJadeParser.EOF)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.proc()
                self.state = 52
                self.match(FJadeParser.EOF)
                pass
            elif token in [12, 13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.playerev()
                self.state = 55
                self.match(FJadeParser.EOF)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.entityev()
                self.state = 58
                self.match(FJadeParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(FJadeParser.FUNCTION, 0)

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def LBRACE(self):
            return self.getToken(FJadeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FJadeParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.StmtContext)
            else:
                return self.getTypedRuleContext(FJadeParser.StmtContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)




    def func(self):

        localctx = FJadeParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(FJadeParser.FUNCTION)
            self.state = 63
            self.match(FJadeParser.NAME)
            self.state = 64
            self.match(FJadeParser.LBRACE)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==37:
                self.state = 65
                self.stmt()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.match(FJadeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCESS(self):
            return self.getToken(FJadeParser.PROCESS, 0)

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def LBRACE(self):
            return self.getToken(FJadeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FJadeParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.StmtContext)
            else:
                return self.getTypedRuleContext(FJadeParser.StmtContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_proc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProc" ):
                listener.enterProc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProc" ):
                listener.exitProc(self)




    def proc(self):

        localctx = FJadeParser.ProcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_proc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(FJadeParser.PROCESS)
            self.state = 74
            self.match(FJadeParser.NAME)
            self.state = 75
            self.match(FJadeParser.LBRACE)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==37:
                self.state = 76
                self.stmt()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(FJadeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlayerevContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def LBRACE(self):
            return self.getToken(FJadeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FJadeParser.RBRACE, 0)

        def PLAYEREVENT(self):
            return self.getToken(FJadeParser.PLAYEREVENT, 0)

        def PLAYEREVENTALT(self):
            return self.getToken(FJadeParser.PLAYEREVENTALT, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.StmtContext)
            else:
                return self.getTypedRuleContext(FJadeParser.StmtContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_playerev

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlayerev" ):
                listener.enterPlayerev(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlayerev" ):
                listener.exitPlayerev(self)




    def playerev(self):

        localctx = FJadeParser.PlayerevContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_playerev)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            _la = self._input.LA(1)
            if not(_la==12 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 85
            self.match(FJadeParser.NAME)
            self.state = 86
            self.match(FJadeParser.LBRACE)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==37:
                self.state = 87
                self.stmt()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(FJadeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityevContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTITYEVENT(self):
            return self.getToken(FJadeParser.ENTITYEVENT, 0)

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def LBRACE(self):
            return self.getToken(FJadeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FJadeParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.StmtContext)
            else:
                return self.getTypedRuleContext(FJadeParser.StmtContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_entityev

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityev" ):
                listener.enterEntityev(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityev" ):
                listener.exitEntityev(self)




    def entityev(self):

        localctx = FJadeParser.EntityevContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_entityev)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(FJadeParser.ENTITYEVENT)
            self.state = 96
            self.match(FJadeParser.NAME)
            self.state = 97
            self.match(FJadeParser.LBRACE)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==37:
                self.state = 98
                self.stmt()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(FJadeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simplestmt(self):
            return self.getTypedRuleContext(FJadeParser.SimplestmtContext,0)


        def blockedstmt(self):
            return self.getTypedRuleContext(FJadeParser.BlockedstmtContext,0)


        def getRuleIndex(self):
            return FJadeParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = FJadeParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.simplestmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.blockedstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimplestmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CATEGORY(self):
            return self.getToken(FJadeParser.CATEGORY, 0)

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def paramslist(self):
            return self.getTypedRuleContext(FJadeParser.ParamslistContext,0)


        def SEMI(self):
            return self.getToken(FJadeParser.SEMI, 0)

        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(FJadeParser.PIPE)
            else:
                return self.getToken(FJadeParser.PIPE, i)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(FJadeParser.STRING)
            else:
                return self.getToken(FJadeParser.STRING, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(FJadeParser.COLON)
            else:
                return self.getToken(FJadeParser.COLON, i)

        def NEGATE(self):
            return self.getToken(FJadeParser.NEGATE, 0)

        def SELECTOR(self):
            return self.getToken(FJadeParser.SELECTOR, 0)

        def TARGET(self):
            return self.getToken(FJadeParser.TARGET, 0)

        def getRuleIndex(self):
            return FJadeParser.RULE_simplestmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimplestmt" ):
                listener.enterSimplestmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimplestmt" ):
                listener.exitSimplestmt(self)




    def simplestmt(self):

        localctx = FJadeParser.SimplestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_simplestmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(FJadeParser.CATEGORY)
            self.state = 111
            self.match(FJadeParser.NAME)
            self.state = 112
            self.paramslist()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 113
                self.match(FJadeParser.PIPE)
                self.state = 114
                self.match(FJadeParser.STRING)
                self.state = 115
                self.match(FJadeParser.COLON)
                self.state = 116
                self.match(FJadeParser.STRING)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 122
                self.match(FJadeParser.NEGATE)


            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 125
                self.match(FJadeParser.SELECTOR)
                self.state = 126
                self.match(FJadeParser.TARGET)


            self.state = 129
            self.match(FJadeParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockedstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classicblockedstmt(self):
            return self.getTypedRuleContext(FJadeParser.ClassicblockedstmtContext,0)


        def elsestmt(self):
            return self.getTypedRuleContext(FJadeParser.ElsestmtContext,0)


        def getRuleIndex(self):
            return FJadeParser.RULE_blockedstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockedstmt" ):
                listener.enterBlockedstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockedstmt" ):
                listener.exitBlockedstmt(self)




    def blockedstmt(self):

        localctx = FJadeParser.BlockedstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_blockedstmt)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [37]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.classicblockedstmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.elsestmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElsestmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(FJadeParser.ELSE, 0)

        def LBRACE(self):
            return self.getToken(FJadeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FJadeParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.StmtContext)
            else:
                return self.getTypedRuleContext(FJadeParser.StmtContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_elsestmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElsestmt" ):
                listener.enterElsestmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElsestmt" ):
                listener.exitElsestmt(self)




    def elsestmt(self):

        localctx = FJadeParser.ElsestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_elsestmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(FJadeParser.ELSE)
            self.state = 136
            self.match(FJadeParser.LBRACE)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==37:
                self.state = 137
                self.stmt()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 143
            self.match(FJadeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassicblockedstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CATEGORY(self):
            return self.getToken(FJadeParser.CATEGORY, 0)

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def paramslist(self):
            return self.getTypedRuleContext(FJadeParser.ParamslistContext,0)


        def LBRACE(self):
            return self.getToken(FJadeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FJadeParser.RBRACE, 0)

        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(FJadeParser.PIPE)
            else:
                return self.getToken(FJadeParser.PIPE, i)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(FJadeParser.STRING)
            else:
                return self.getToken(FJadeParser.STRING, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(FJadeParser.COLON)
            else:
                return self.getToken(FJadeParser.COLON, i)

        def NEGATE(self):
            return self.getToken(FJadeParser.NEGATE, 0)

        def SELECTOR(self):
            return self.getToken(FJadeParser.SELECTOR, 0)

        def TARGET(self):
            return self.getToken(FJadeParser.TARGET, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.StmtContext)
            else:
                return self.getTypedRuleContext(FJadeParser.StmtContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_classicblockedstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassicblockedstmt" ):
                listener.enterClassicblockedstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassicblockedstmt" ):
                listener.exitClassicblockedstmt(self)




    def classicblockedstmt(self):

        localctx = FJadeParser.ClassicblockedstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_classicblockedstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(FJadeParser.CATEGORY)
            self.state = 146
            self.match(FJadeParser.NAME)
            self.state = 147
            self.paramslist()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 148
                self.match(FJadeParser.PIPE)
                self.state = 149
                self.match(FJadeParser.STRING)
                self.state = 150
                self.match(FJadeParser.COLON)
                self.state = 151
                self.match(FJadeParser.STRING)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 157
                self.match(FJadeParser.NEGATE)


            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 160
                self.match(FJadeParser.SELECTOR)
                self.state = 161
                self.match(FJadeParser.TARGET)


            self.state = 164
            self.match(FJadeParser.LBRACE)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==37:
                self.state = 165
                self.stmt()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self.match(FJadeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamslistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.ExprContext)
            else:
                return self.getTypedRuleContext(FJadeParser.ExprContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_paramslist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamslist" ):
                listener.enterParamslist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamslist" ):
                listener.exitParamslist(self)




    def paramslist(self):

        localctx = FJadeParser.ParamslistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramslist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 173
                    self.expr() 
                self.state = 178
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(FJadeParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(FJadeParser.NUMBER, 0)

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def vector(self):
            return self.getTypedRuleContext(FJadeParser.VectorContext,0)


        def location(self):
            return self.getTypedRuleContext(FJadeParser.LocationContext,0)


        def item(self):
            return self.getTypedRuleContext(FJadeParser.ItemContext,0)


        def variable(self):
            return self.getTypedRuleContext(FJadeParser.VariableContext,0)


        def gval(self):
            return self.getTypedRuleContext(FJadeParser.GvalContext,0)


        def array(self):
            return self.getTypedRuleContext(FJadeParser.ArrayContext,0)


        def dictionary(self):
            return self.getTypedRuleContext(FJadeParser.DictionaryContext,0)


        def potion(self):
            return self.getTypedRuleContext(FJadeParser.PotionContext,0)


        def sound(self):
            return self.getTypedRuleContext(FJadeParser.SoundContext,0)


        def particle(self):
            return self.getTypedRuleContext(FJadeParser.ParticleContext,0)


        def getRuleIndex(self):
            return FJadeParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = FJadeParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expr)
        try:
            self.state = 192
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.match(FJadeParser.STRING)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.match(FJadeParser.NUMBER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 181
                self.match(FJadeParser.NAME)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 182
                self.vector()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 183
                self.location()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 184
                self.item()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 185
                self.variable()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 186
                self.gval()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 187
                self.array()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 188
                self.dictionary()
                pass
